# score-addon-pico

./: CMakeLists.txt  README.md  addon.json  release.sh  score_addon_pico.cpp  score_addon_pico.hpp
Pico/: ApplicationPlugin.cpp  ApplicationPlugin.hpp  BasicSourcePrinter.cpp  BasicSourcePrinter.hpp  DeviceGraph.cpp  DeviceGraph.hpp  DeviceIO.cpp  DeviceIO.hpp  ESPSourcePrinter.cpp  ESPSourcePrinter.hpp  ExportDialog.cpp  ExportDialog.hpp  LibossiaGenerator.cpp  OSCQueryGenerator.cpp  OSCQueryGenerator.hpp  Pico.hpp  PicoModel.cpp  PicoModel.hpp  PicoUi.hpp  Pruner.cpp  Pruner.hpp  SourcePrinter.cpp  SourcePrinter.hpp
templates/common/: ExprtkMapper.hpp  PolySynth.hpp  ScoreHelpers.hpp  ossia_embedded_api.hpp
templates/desktop/: Untitled-1.cpp  build.sh  exprtk.cpp  picodevice..hpp  scenario-struct.hpp  test.score
templates/ossia-device/: constants.hpp  impl-manual.hpp  impl-ossia.hpp  ossia-device-test.ino  utility.hpp
templates/teensy-minimal/: platformio.ini
templates/teensy-minimal/src/: main.cpp
